@@ -1,6 +1,6 @@
 {
-  "timestamp" : "2022-03-31T01:17:38Z",
-  "count" : 7,
+  "timestamp" : "2022-04-13T01:25:46Z",
+  "count" : 6,
   "count_minmax" : [ 0, 7 ],
   "count_prev_day_inc" : 8,
   "count_prev_day_dec" : 0,
