@@ -1,20 +1,13 @@
 {
-  "timestamp" : "2022-04-12T16:24:18Z",
-  "count_outdated" : 133,
-  "uniques_outdated" : 87,
-  "count" : 180,
-  "uniques" : 117,
+  "timestamp" : "2022-04-13T01:25:46Z",
+  "count_outdated" : 142,
+  "uniques_outdated" : 92,
+  "count" : 182,
+  "uniques" : 118,
   "clones" : [
     {
-      "timestamp": "2022-03-29T00:00:00Z",
-      "count": 6,
-      "count_minmax": [ 2, 9 ],
-      "uniques": 4,
-      "uniques_minmax": [ 1, 5 ]
-    },
-    {
       "timestamp": "2022-03-30T00:00:00Z",
-      "count": 7,
+      "count": 6,
       "count_minmax": [ 0, 7 ],
       "uniques": 4,
       "uniques_minmax": [ 0, 4 ]
