@@ -1,15 +1,10 @@
 {
-  "count": 47,
+  "count": 40,
   "uniques": 17,
   "clones": [
     {
-      "timestamp": "2022-03-29T00:00:00Z",
-      "count": 6,
-      "uniques": 4
-    },
-    {
       "timestamp": "2022-03-30T00:00:00Z",
-      "count": 7,
+      "count": 6,
       "uniques": 4
     },
     {
