@@ -1,3 +1,9 @@
+2022-04-13T01:25:46Z:
+* notice: last 14d: all unq: 40 17
+* notice: prev accum: outdated-all outdated-unq / all unq: 133 87 / 180 117
+* notice: next accum: outdated-all outdated-unq / all unq: 142 92 / 182 118
+* notice: prev json diff // prev day diff: unq all: +0 +0 / -0 -1 // +0 +0 / -0 -1
+
 2022-04-12T16:24:18Z:
 * notice: last 14d: all unq: 47 17
 * notice: prev accum: outdated-all outdated-unq / all unq: 133 87 / 183 118
